Adicionado a configuração de segurança para todos os micro serviços.